# oe-alliance-plugins

./: Makefile.am  Rules-po.mak  Rules_noxml-po.mak  configure.ac
AutoBouquetsMaker/src/: about.py
AutoBouquetsMaker/src/scanner/: bouquetswriter.py
BTDevicesManager/src/: plugin.py
Blindscan/src/: plugin.py
F3LEDControl/src/: plugin.py
GigaBlueRemote/src/: plugin.py
GigaBlueVFDControl/po/: de.po
GigaBlueVFDControl/src/: plugin.py
INIVFDControl/src/: plugin.py
LCD4linux/src/: plugin.py
MultiTransCodingSetup/src/: plugin.py
RCUSelect/src/: plugin.py
RemoteChannelStreamConverter/src/: plugin.py
TempFanControl/src/: plugin.py
TransCodingSetup/src/: plugin.py
VuRemote/src/: plugin.py
